# robosub-ros

./: .clang-format  .gitattributes  .gitignore  BUILD.md  CONTRIBUTING.md  NOTES.md  README.md  README2.md  SUMMARY.md  build.sh  docker-compose-cthulhu.yml  docker-compose-oogway.yml  docker-compose.yml  frames.gv  model_new_python.py  package-lock.json  q-and-a.md  record.sh
catkin_ws/src/controls/: CMakeLists.txt  README.html  README.md  package.xml
catkin_ws/src/controls/config/: cthulhu.config
catkin_ws/src/controls/launch/: controls.launch  pid.launch
catkin_ws/src/controls/scripts/: .cthulhu.config.swo  desired_state.py  drc_math.py  drc_utils.py  state_republisher.py  test_state_publisher.py  thruster.py  thruster_controls.py  thruster_manager.py
catkin_ws/src/data_pub/: CMakeLists.txt  package.xml
catkin_ws/src/data_pub/launch/: pub_dvl.launch  pub_imu.launch
catkin_ws/src/data_pub/msg/: DVLRaw.msg
catkin_ws/src/data_pub/scripts/: IMU.py  dvl_raw.py  dvl_to_odom.py  imu.py
catkin_ws/src/execute/: CMakeLists.txt  package.xml
catkin_ws/src/execute/launch/: motion.launch  state.launch  tasks.launch
catkin_ws/src/joystick/: CMakeLists.txt  package.xml
catkin_ws/src/joystick/config/: joystick.yaml
catkin_ws/src/joystick/launch/: F310.launch  joystick_raw.launch  pub_joy.launch  thrustmaster.launch
catkin_ws/src/joystick/scripts/: README.md  bus.py  joystick.py  parser_core.py
catkin_ws/src/offboard_comms/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/offboard_comms/Arduino Sketchbooks/ThrusterServoArduino/: MultiplexedObject.h  MultiplexedServo.cpp  ThrusterServoArduino.ino
catkin_ws/src/offboard_comms/msg/: ServoControl.msg  ThrusterSpeeds.msg
catkin_ws/src/offboard_comms/ros_lib/control_msgs/: JointJog.h
catkin_ws/src/offboard_comms/ros_lib/controls/: MoveWithSpeeds.h  ThrusterSpeeds.h
catkin_ws/src/offboard_comms/ros_lib/data_pub/: DVLRaw.h
catkin_ws/src/offboard_comms/ros_lib/mavros_msgs/: ADSBVehicle.h  ActuatorControl.h  Altitude.h  AttitudeTarget.h  BatteryStatus.h  CamIMUStamp.h  CommandCode.h  CompanionProcessStatus.h  DebugValue.h  EstimatorStatus.h  ExtendedState.h  FileEntry.h  FileRead.h  FileTruncate.h  FileWrite.h  GlobalPositionTarget.h  HilActuatorControls.h  HilControls.h  HilGPS.h  HilSensor.h  HilStateQuaternion.h  HomePosition.h  LandingTarget.h  LogData.h  LogEntry.h  ManualControl.h  Mavlink.h  MountControl.h  OnboardComputerStatus.h  OpticalFlowRad.h  OverrideRCIn.h  Param.h  ParamValue.h  PositionTarget.h  RCIn.h  RCOut.h  RTCM.h  RadioStatus.h  SetMavFrame.h  State.h  (+11 more)
catkin_ws/src/offboard_comms/ros_lib/offboard_comms/: ServoControl.h  SetServo.h  SetServos.h  ThrusterSpeeds.h
catkin_ws/src/offboard_comms/ros_lib/rosapi/: MessageDetails.h  ServiceRequestDetails.h  ServiceResponseDetails.h  TypeDef.h
catkin_ws/src/offboard_comms/ros_lib/rosbridge_msgs/: ConnectedClient.h  ConnectedClients.h
catkin_ws/src/offboard_comms/srv/: SetServo.srv  SetServos.srv
catkin_ws/src/robosub_description/: CMakeLists.txt  package.xml
catkin_ws/src/robosub_description/urdf/: robosub.urdf
catkin_ws/src/sensor_fusion/: CMakeLists.txt  package.xml
catkin_ws/src/sensor_fusion/launch/: fuse.launch  test_dvl.launch  test_imu.launch
catkin_ws/src/sensor_fusion/params/: main.yaml  test_imu.yaml
catkin_ws/src/sensor_fusion/scripts/: simulation_republisher.py  test_nothing.py
catkin_ws/src/static_transforms/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/static_transforms/launch/: static_transforms.launch
core/catkin_ws/src/cthulhu_msgs/: CMakeLists.txt  package.xml
core/catkin_ws/src/custom_msgs/: CMakeLists.txt  package.xml
core/catkin_ws/src/custom_msgs/action/: AcousticsData.action  AcousticsGuess.action  AcousticsProcessing.action  AcousticsWrapper.action  ControlsDesiredPose.action  ControlsDesiredPower.action  ControlsDesiredTwist.action  Saeleae.action  Saleae.action  UploadArduino.action  sweep.action
core/catkin_ws/src/custom_msgs/msg/: CVObject.msg  ControlTypes.msg  Memory.msg  PIDAxesInfo.msg  PIDDerivativeMode.msg  PIDDerivativeType.msg  PIDGain.msg  PIDGains.msg  PIDInfo.msg  PIDLoopsAxesInfo.msg  PIDTerms.msg  PWMAllocs.msg  PathMarker.msg  RectInfo.msg  RemoteLaunchInfo.msg  RunningNode.msg  ServoAngle.msg  ServoAngleArray.msg  SimObject.msg  SimObjectArray.msg  SonarRequest.msg  SonarResponse.msg  SonarSweepRequest.msg  SonarSweepResponse.msg  SystemUsage.msg  TaskUpdate.msg  ThrusterAllocations.msg  ThrusterAllocs.msg  ThrusterSpeeds.msg  TopicNames.msg
core/catkin_ws/src/custom_msgs/srv/: ConnectUSBCamera.srv  EnasbleMonoStream.srv  FileDownload.srv  FileUpload.srv  GetRunningNodes.srv  SetCVModel.srv  SetControlTypes.srv  SetDepthAIModel.srv  SetPIDDerivativeModes.srv  SetPIDGains.srv  SetPowerScaleFactor.srv  SetServo.srv  SetStaticPower.srv  StopLaunch.srv
core/ros2_ws/src/custom_msgs/: CMakeLists.txt  package.xml
core/ros2_ws/src/custom_msgs/action/: AcousticsData.action  AcousticsProcessing.action  AcousticsWrapper.action  Saleae.action
core/ros2_ws/src/custom_msgs/msg/: CVObject.msg  HydrophoneSet.msg  ServoAngleArray.msg  SimObject.msg  SystemUsage.msg  ThrusterSpeeds.msg
landside/catkin_ws/src/camera_view/: CMakeLists.txt  README.md  package.xml
landside/catkin_ws/src/cv_control_panel/: CMakeLists.txt  package.xml
landside/catkin_ws/src/gui/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
landside/catkin_ws/src/joystick/: CMakeLists.txt  README.md  package.xml
landside/catkin_ws/src/simulation/: BOUNDINGBOX_README.md  CMakeLists.txt  README.md  package.xml
landside/ros2_ws/src/camera_view/: README.md  package.xml  setup.cfg  setup.py
landside/ros2_ws/src/gui/: package.xml  setup.py
landside/ros2_ws/src/joystick/: README.md  package.xml  setup.cfg  setup.py
landside/ros2_ws/src/simulation/: README.md  package.xml  setup.cfg  setup.py
src/sub-urdf/: CMakeLists.txt  package.xml
src/sub-urdf/config/: joint_names_FullSubV6.5.yaml
src/sub-urdf/launch/: display.launch  gazebo.launch
src/sub-urdf/urdf/: sub-urdf.urdf
(+2182 files in other folders)
