<?xml version="1.0"?>
<package format="2">
  <name>sensor_fusion</name>
  <version>0.0.0</version>
  <description>The sensor_fusion package</description>

  <maintainer email="hello@duke-robotics.com">Duke Robotics Club</maintainer>

  <license>MIT</license>

  <depend>rospy</depend>
  <depend>robosub_description</depend>
  <depend>robot_localization</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
