<?xml version="1.0"?>
<package format="2">
  <name>static_transforms</name>
  <version>0.0.0</version>
  <description>
    This package publishes the static transforms that define key parts of the robot.
  </description>

  <maintainer email="hello@duke-robotics.com">Duke Robotics Club</maintainer>

  <license>MIT</license>

  <depend>tf2_ros</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
