<?xml version="1.0"?>
<package format="2">
  <name>cthulhu_msgs</name>
  <version>0.0.0</version>
  <description>
    Package that contains the custom message for our robot.
  </description>

  <maintainer email="hello@duke-robotics.com">Duke Robotics Club</maintainer>

  <license>MIT</license>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
