<?xml version="1.0"?>
<package format="2">
  <name>joystick</name>
  <version>0.0.0</version>
  <description>
    Package that allows for joystick input on our robot.
  </description>

  <maintainer email="hello@duke-robotics.com">Duke Robotics Club</maintainer>

  <license>MIT</license>

  <depend>rospy</depend>
  <depend>joy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>resource_retriever</depend>

  <exec_depend>python-yaml</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
