<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_view</name>
  <version>0.0.0</version>
  <description>
    Package that allows for viewing, saving, and loading videos to simulate camera input.
  </description>

  <maintainer email="hello@duke-robotics.com">Duke Robotics Club</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>image_view</depend>
  <depend>image_publisher</depend>
  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>resource_retriever</depend>

  <exec_depend>opencv-python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
